package com.canerture.search.ui

internal object SearchTestTags {
    const val TOOLBAR = "search.toolbar"
    const val SEARCH_BAR = "search.searchBar"

    // Empty state
    const val EMPTY_MESSAGE_TEXT = "search.emptyMessageText"

    // Quiz item
    const val QUIZ_ITEM_IMAGE = "search.quizItem.image"
...
